Adding Downloads page
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2077 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -222,10 +222,17 @@
 
   </div>
   <div class="footer">
-    <p><a href="https://mobicents.dev.java.net/servlets/ProjectNewsRSS">RSS Feed</a> | <a href="mailto:telco@redhat.com">Contact</a> | <a href="#">Products</a> | <a href="#">Disclaimer</a> | <a href="#">Privacy</a> <br>
+    <p><a href="https://mobicents.dev.java.net/servlets/ProjectNewsRSS">RSS Feed</a> | <a href="mailto:telco@redhat.com">Contact</a> | <a href="#">Products</a> | <a href="#">Disclaimer</a> | <a href="#">Privacy</a> <br />
 
-      &copy; Copyright 2006 Mobicents, web design: <a href="http://www.solucija.com/">Solucija</a></p>
+    </p>
   </div>
+  <div id="footer">
+    <div>
+      <div align="center"><a href="http://www.redhat.com/"><img src="logo_rh_home.png" alt=" Red Hat" border="0" height="31" width="96" /></a><br />
+      </div>
+    </div>
+    <div align="center">&copy; 2008 Red Hat Middleware, LLC. All rights reserved. <a href="http://www.jboss.com/privacy_policy">Privacy Policy</a></div> </div>
+</div>
 </div>
 </body>
 </html>
