--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -82,8 +82,42 @@
 	
 		<tr class="oddRow">
 
-			<td class="rowlinefirst"><b>0.4.1 </b></td>
+			<td class="rowlinefirst"><b>0.5 </b></td>
 			<td class="rowline">Early Preview (Recommended)</td>
+			<td class="rowline">Tomcat 6.0.14</td>
+			<td class="rowline">11.2MB</td>
+			<td class="rowline">05-August-2008</td>
+
+			<td class="rowline">LGPL</td>	
+			<td class="rowline">
+				<a href="http://downloads.sourceforge.net/mobicents/mss-0.5-apache-tomcat-6.0.14.zip">Download</a>
+			</td>
+			<td class="rowline">
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=43402">Notes</a>
+			</td>
+		</tr>
+	
+		<tr class="evenRow">
+
+			<td class="rowlinefirst"><b>0.5 </b></td>
+			<td class="rowline">Early Preview (Recommended)</td>
+			<td class="rowline">JBoss 4.2.2.GA</td>
+			<td class="rowline">103.0MB</td>
+			<td class="rowline">05-August-2008</td>
+
+			<td class="rowline">LGPL</td>	
+			<td class="rowline">
+				<a href="http://downloads.sourceforge.net/mobicents/mss-0.5-jboss-4.2.2.GA.zip">Download</a>
+			</td>
+			<td class="rowline">
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=43402">Notes</a>
+			</td>
+		</tr>
+	
+		<tr class="oddRow">
+
+			<td class="rowlinefirst"><b>0.4.1 </b></td>
+			<td class="rowline">Early Preview</td>
 			<td class="rowline">Tomcat 6.0.14</td>
 			<td class="rowline">11.5MB</td>
 			<td class="rowline">04-July-2008</td>
@@ -100,7 +134,7 @@
 		<tr class="evenRow">
 
 			<td class="rowlinefirst"><b>0.4.1 </b></td>
-			<td class="rowline">Early Preview (Recommended)</td>
+			<td class="rowline">Early Preview</td>
 			<td class="rowline">JBoss 4.2.2.GA</td>
 			<td class="rowline">65.0MB</td>
 			<td class="rowline">04-July-2008</td>
@@ -118,7 +152,7 @@
 		<tr class="oddRow">
 
 			<td class="rowlinefirst"><b>0.4 </b></td>
-			<td class="rowline">Early Preview (Recommended)</td>
+			<td class="rowline">Early Preview</td>
 			<td class="rowline">Tomcat 6.0.14</td>
 			<td class="rowline">11.5MB</td>
 			<td class="rowline">24-June-2008</td>
@@ -135,7 +169,7 @@
 		<tr class="evenRow">
 
 			<td class="rowlinefirst"><b>0.4 </b></td>
-			<td class="rowline">Early Preview (Recommended)</td>
+			<td class="rowline">Early Preview</td>
 			<td class="rowline">JBoss 4.2.2.GA</td>
 			<td class="rowline">65.0MB</td>
 			<td class="rowline">24-June-2008</td>
