--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -85,12 +85,12 @@
 			<td class="rowlinefirst"><b>0.5 </b></td>
 			<td class="rowline">Early Preview (Recommended)</td>
 			<td class="rowline">Tomcat 6.0.14</td>
-			<td class="rowline">11.2MB</td>
+			<td class="rowline">12.2MB</td>
 			<td class="rowline">15-August-2008</td>
 
 			<td class="rowline">LGPL</td>	
 			<td class="rowline">
-				<a href="http://downloads.sourceforge.net/mobicents/mss-0.5-apache-tomcat-6.0.14.zip">Download</a>
+				<a href="http://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=619066">Download</a>
 			</td>
 			<td class="rowline">
 				<a href="http://forums.java.net/jive/thread.jspa?threadID=45636">Notes</a>
@@ -102,12 +102,12 @@
 			<td class="rowlinefirst"><b>0.5 </b></td>
 			<td class="rowline">Early Preview (Recommended)</td>
 			<td class="rowline">JBoss 4.2.2.GA</td>
-			<td class="rowline">103.0MB</td>
+			<td class="rowline">107.0MB</td>
 			<td class="rowline">15-August-2008</td>
 
 			<td class="rowline">LGPL</td>	
 			<td class="rowline">
-				<a href="http://downloads.sourceforge.net/mobicents/mss-0.5-jboss-4.2.2.GA.zip">Download</a>
+				<a href="http://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=619066">Download</a>
 			</td>
 			<td class="rowline">
 				<a href="http://forums.java.net/jive/thread.jspa?threadID=45636">Notes</a>
