--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -82,7 +82,7 @@
 	
 		<tr class="oddRow">
 
-			<td class="rowlinefirst"><b>0.5 </b></td>
+			<td class="rowlinefirst"><b>0.6 </b></td>
 			<td class="rowline">Certified (Recommended)</td>
 			<td class="rowline">Tomcat 6.0.14</td>
 			<td class="rowline">12.2MB</td>
@@ -90,10 +90,10 @@
 
 			<td class="rowline">LGPL</td>	
 			<td class="rowline">
-				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024">Download</a>
+				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=629778">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=45636">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
 			</td>
 		</tr>
 	
@@ -107,10 +107,10 @@
 
 			<td class="rowline">LGPL</td>	
 			<td class="rowline">
-				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024">Download</a>
+				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=629778">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=45636">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
 			</td>
 		</tr>
 	
