--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -93,7 +93,7 @@
 				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=644201">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=54203">Notes</a>
 			</td>
 		</tr>
 	
@@ -110,7 +110,7 @@
 				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=644201">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?threadID=54203">Notes</a>
 			</td>
 		</tr>
 	
@@ -127,7 +127,7 @@
 				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=641930">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?messageID=318180">Notes</a>
 			</td>
 		</tr>
 	
@@ -144,7 +144,7 @@
 				<a href="https://sourceforge.net/project/showfiles.php?group_id=102670&package_id=262024&release_id=641930">Download</a>
 			</td>
 			<td class="rowline">
-				<a href="http://forums.java.net/jive/thread.jspa?threadID=48053">Notes</a>
+				<a href="http://forums.java.net/jive/thread.jspa?messageID=318180">Notes</a>
 			</td>
 		</tr>
 	
