Cleanup page navigation
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4524 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/pstnGatewayAccount.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/pstnGatewayAccount.xhtml
@@ -54,7 +54,7 @@
             <s:button propagation="end"
                                id="done"
                             value="Done"
-                             view="/pstnGatewayAccountList.xhtml"/>
+                             view="/home.xhtml"/>
         </div>
 
     </h:form>
