--- a/sip-servlets-seam/ipbx/WebContent/registration.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/registration.xhtml
@@ -42,7 +42,7 @@
             <s:button propagation="end"
                                id="done"
                             value="Done"
-                             view="/registrationList.xhtml"/>
+                             view="/home.xhtml"/>
         </div>
 
     </h:form>
