--- a/sip-servlets-seam/ipbx/WebContent/globalProperty.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/globalProperty.xhtml
@@ -47,7 +47,7 @@
             <s:button propagation="end"
                                id="done"
                             value="Done"
-                             view="/globalPropertyList.xhtml"/>
+                             view="/home.xhtml"/>
         </div>
 
     </h:form>
