Polishing a bit the UI, update ant build to Seam 2.1.1.GA, smarter hangup and call
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4543 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/home.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/home.xhtml
@@ -14,9 +14,8 @@
 
 		<div><a4j:region rendered="true">
 			<h1>Mobicents Sip Servlets Media IPBX</h1>
-			<div style="position:absolute;z-index: -999; top:-120px;right:0">
-			<h:graphicImage
-				value="/img/ipbx-theme.png" /></div></a4j:region></div>
+			<div style="width:804px;height:821px;position:absolute;z-index: -999; top:-120px;right:0;background-image:url('img/ipbx-theme.png')">
+			</div></a4j:region></div>
 		
 		<div class="rightpanel">
 		<a4j:region rendered="#{not identity.loggedIn}">Please log in or register to get started.</a4j:region>
