--- a/sip-servlets-seam/ipbx/WebContent/globalProperty.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/globalProperty.xhtml
@@ -13,7 +13,7 @@
     <h:form id="globalPropertyForm" rendered="#{identity.hasRole('admin')}">
 
         <rich:panel>
-            <f:facet name="header">globalProperty</f:facet>
+            <f:facet name="header">Global Property</f:facet>
 
             <s:decorate id="nameField" template="layout/edit.xhtml">
                 <ui:define name="label">Name</ui:define>
