--- a/sip-servlets-seam/ipbx/WebContent/pstnGatewayAccountList.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/pstnGatewayAccountList.xhtml
@@ -43,7 +43,7 @@
 
     <div class="actionButtons">
         <s:button id="done"
-               value="Create pstnGatewayAccount"
+               value="Create PSTN Gateway Account"
                 view="/pstnGatewayAccount.xhtml"/>
     </div>
 
