--- a/sip-servlets-seam/ipbx/WebContent/userList.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/userList.xhtml
@@ -41,6 +41,12 @@
         </div>
 
     </rich:panel>
+    
+     <div class="actionButtons">
+        <s:button id="newUser"
+               value="Create new user"
+                view="/user.xhtml"/>
+    </div>
 
 </a4j:region>
 </ui:define>
