--- a/sip-servlets-seam/ipbx/WebContent/home.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/home.xhtml
@@ -10,7 +10,7 @@
 
 	<ui:define name="body">
 
-		<h:messages globalOnly="true" styleClass="message" />
+		
 
 		<div><a4j:region rendered="true">
 			<h1>Mobicents Sip Servlets Media IPBX</h1>
@@ -28,9 +28,9 @@
 			<a4j:push reRender="callStatusPanel" eventProducer="#{currentUserState.addStatusListener}" interval="1000"/>
 			<div style="padding:4px;margin:7px;border:1px solid #CCC;">
 			<s:label>Phone number or SIP URI</s:label><rich:spacer width="10"></rich:spacer>
-			<h:inputText value="#{callPstnAction.number}" /><rich:spacer width="10"/>
+			<h:inputText value="#{callPhoneAction.number}" /><rich:spacer width="10"/>
 			<h:commandLink style="color:#444" value="Dial" 
-			action="#{callAction.call()}"/></div>
+			action="#{callPhoneAction.call()}"/></div>
 			<rich:panel >
 
 				<rich:dataTable id="ongoingCall"
