Streamline the UI and hide exceptions.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4603 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/user.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/user.xhtml
@@ -17,7 +17,7 @@
 
             <s:decorate id="nameField" template="layout/edit.xhtml">
                 <ui:define name="label">Username</ui:define>
-                <h:inputText id="name" required="true"
+                <h:inputText id="name" required="true" disabled="#{userHome.managed}"
                              value="#{userHome.instance.name}"/>
             </s:decorate>
             <s:decorate id="passField" template="layout/edit.xhtml">
