--- a/sip-servlets-seam/ipbx/WebContent/registration.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/registration.xhtml
@@ -21,8 +21,31 @@
                              value="#{registrationHome.instance.uri}"/>
             </s:decorate>
 
-            <div style="clear:both"/>
+            <div style="clear:both"/>			
+			
+            <h:outputText value="No bindings currently associated with this registration"
+                       rendered="#{empty registrationHome.instance.bindings}"/>
 
+			<h:outputText value="Current Bindings for this registration :"
+                       rendered="#{not empty registrationHome.instance.bindings}"/>
+
+            <h:dataTable id="bindingsList" var="binding"
+                      value="#{registrationHome.instance.bindings}"
+                   rendered="#{not empty registrationHome.instance.bindings}">
+                <h:column>
+                    <f:facet name="header">Id</f:facet>
+                    #{binding.id}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Contact Address</f:facet>
+                    #{binding.contactAddress}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Expires</f:facet>
+                    #{binding.expires}
+                </h:column>
+            </h:dataTable>
+	
         </rich:panel>
 
         <div class="actionButtons">
