adding persistence of binding removal and updates
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4626 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/registration.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/registration.xhtml
@@ -46,7 +46,7 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header">CSeq</f:facet>
-                    #{binding.cSeq}
+                    #{binding.CSeq}
                 </h:column>
             </h:dataTable>
 	
