some little UI improvements
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4631 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/contact.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/contact.xhtml
@@ -36,7 +36,7 @@
                        rendered="#{contactHome.managed}"/>
             <h:commandButton id="delete"
                           value="Delete"
-                         action="#{contactHome.remove()}"
+                         action="#{contactHome.remove}"
                       immediate="true"
                        rendered="#{contactHome.managed}"/>
             <s:button propagation="end"
