Fixes for the call function in the UI and the Dial one. and the hangup with one caller in the conf
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@4642 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/home.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/home.xhtml
@@ -28,8 +28,7 @@
 			<div style="padding:4px;margin:7px;border:1px solid #CCC;">
 			<s:label>Phone number or SIP URI</s:label><rich:spacer width="10"></rich:spacer>
 			<h:inputText value="#{callPhoneAction.number}" /><rich:spacer width="10"/>
-			<h:commandLink style="color:#444" value="Dial" 
-			action="#{callPhoneAction.call()}"/></div>
+			<h:commandLink style="color:#444" value="Dial" action="#{callPhoneAction.call()}"/></div>
 			<rich:panel >
 
 				<rich:dataTable id="ongoingCall"
