--- a/sip-servlets-seam/ipbx/WebContent/userList.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/userList.xhtml
@@ -11,6 +11,7 @@
 
 <ui:define name="body">
 <a4j:region rendered="#{identity.hasRole('admin')}">
+<div class="helphint">As an administrator you can edit the user accounts from here. Change names, password, remove users, etc..</div>
     <rich:panel>
         <f:facet name="header">Users</f:facet>
 
