--- a/sip-servlets-seam/ipbx/WebContent/registrationList.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/registrationList.xhtml
@@ -9,7 +9,8 @@
     template="layout/template.xhtml">
 
 <ui:define name="body">
-
+<div class="helphint">You can add SIP URIs and PSTN Phone numbers for you account in this panel. Later you can register against the SIP URIs from SIP phones and the registration bindings will appear in this panel.
+			 When initiation calls from this UI only the phones you have selected with <b>Ring</b> will be called.</div>
     <rich:panel>
         <f:facet name="header">Registrations</f:facet>
 
