Another round of updates to IPBX - Moving calls between phones, UI, convenience and registrations
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@5215 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-seam/ipbx/WebContent/registration.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/registration.xhtml
@@ -75,7 +75,7 @@
             <s:button propagation="end"
                                id="done"
                             value="Done"
-                             view="/registrationList.xhtml"/>
+                             view="/home.xhtml"/>
         </div>
 
     </h:form>
