--- a/sip-servlets-seam/ipbx/WebContent/contact.xhtml
+++ b/sip-servlets-seam/ipbx/WebContent/contact.xhtml
@@ -48,7 +48,7 @@
             <s:button propagation="end"
                                id="done"
                             value="Done"
-                             view="/contactList.xhtml"/>
+                             view="/home.xhtml"/>
         </div>
 
     </h:form>
