--- a/sip-servlets-examples/alerting-app/sip-servlets/src/main/sipapp/send-sms-alert-test.html
+++ b/sip-servlets-examples/alerting-app/sip-servlets/src/main/sipapp/send-sms-alert-test.html
@@ -7,10 +7,11 @@
 <p><font size="6">Test Page to SMS Send Alerts</font></p>
 <form method="POST" action="sms">
 
-	<p>To:</p>
+	<p>Alert Id:</p>
 	<p><input type="text" name="alertId" size="20" value="10101"></p>
-	<p>From:</p>
-	<p><input type="text" name="tel" size="20" value="0679364375"></p>	
+	<p>Tel number:</p>
+	<p><input type="text" name="tel" size="20" value="+33679364376"></p>
+	<p>Alert Text:</p>	
 	<p><input type="text" name="alertText" size="100"></p>
 	<p><input type="submit" value="Submit" name="B1"><input type="reset" value="Reset" name="B2"></p>
 </form>
