Update JBoss CI links in Mobicents documentation
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@19296 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
+++ b/sip-servlets-bootstrap/src/site/resources/mss-downloads.html
@@ -980,7 +980,7 @@
 		</tr>
 	</tbody></table>
 
-<h3>Nightly snapshot : <a href="http://hudson.jboss.org/hudson/job/MobicentsSipServletsRelease">http://hudson.jboss.org/hudson/job/MobicentsSipServletsRelease</a></h3>   
+<h3>Nightly snapshot : <a href="http://ci.jboss.org/jenkins/job/MobicentsSipServletsRelease">http://ci.jboss.org/jenkins/job/MobicentsSipServletsRelease</a></h3>   
    
     </div>
 
