--- a/management/sip-servlets-management/src/main/webapp/index.html
+++ b/management/sip-servlets-management/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 					<div class="well sidebar-nav">
 						<ul class="nav nav-list">
 							<li class="nav-header">Management</li>
-							<li class="active"><a href="#" onclick="setMenu(this, 'server-control')"><i class="icon-hdd" style="font-size: 1.2em;"></i> Server Control</a></li>
+							<!--li class="active"><a href="#" onclick="setMenu(this, 'server-control')"><i class="icon-hdd" style="font-size: 1.2em;"></i> Server Control</a></li-->
 							<li><a href="#" onclick="setMenu(this, 'application-routing')"><i class="icon-copy" style="font-size: 1.2em;"></i> Application Routing</a></li>
 							<li><a href="#" onclick="setMenu(this, 'server-settings')"><i class="icon-th-large" style="font-size: 1.2em;"></i> Server Settings</a></li>
 							<!--li class="nav-header">Monitoring</li>
