--- a/management/sip-servlets-management/src/main/webapp/index.html
+++ b/management/sip-servlets-management/src/main/webapp/index.html
@@ -78,7 +78,7 @@
 							// ask for it...
 						}
 						else {
-							$('#content').load('modules/server-control.html');
+							$('#content').load('modules/application-routing.html');
 						}
 						$("#btn-min-console").click();
 						logToConsole('INFO', 'Mobicents SIP Servlets Management Console ready!');
